Add some mediocre styling

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+
+  --layer-0-color: #eef2ff;
+  --layer-1-color: #d6daf0;
+
+  background: var(--layer-0-color);
+  color: #000000;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#key-prompt {
+  height: 100vh;
+  width: 100vw;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#key-prompt-inner {
+  background: var(--layer-1-color);
+  padding: 100px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
 }
