--- a/front/src/App.css
+++ b/front/src/App.css
@@ -22,3 +22,47 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
 }
+
+.thread {
+  border-bottom: 1px solid;
+}
+
+.thread > .responses {
+  display: inline;
+}
+
+#header {
+  margin-top: 30px;
+  text-align: center;
+}
+
+#board-title {
+  color: #af0a0f;
+  font-size: 28px;
+  font-weight: 800;
+  font-family: Tahoma,sans-serif;
+  letter-spacing: -2px;
+}
+
+#thread-starter {
+  margin-top: 7px;
+}
+
+#thread-starter, #thread-starter > button {
+  color: #34345c;
+  font-size: 22px;
+  font-weight: 700;
+}
+
+#thread-starter > button {
+  padding-left: 0;
+  padding-right: 0;
+  outline: none;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+#thread-starter > button:hover {
+  color: #de0000;
+}
