--- a/front/src/App.css
+++ b/front/src/App.css
@@ -24,7 +24,21 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .thread {
-  border-bottom: 1px solid;
+  border-top: 1px solid #b7c5d9;
+  display: flex;
+  flex-direction: row;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.thread > .image-container > img {
+  margin-right: 20px;
+  margin-left: 20px;
+  width: 250px;
+  display: inline-block;
+  vertical-align: top;
+  height: auto;
+  /* object-fit: contain; */
 }
 
 .thread > .responses {
@@ -33,6 +47,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #header {
   margin-top: 30px;
+  margin-bottom: 10px;
   text-align: center;
 }
 
