--- a/front/src/App.css
+++ b/front/src/App.css
@@ -10,13 +10,12 @@ body {
 }
 
 #key-prompt {
-  height: 100vh;
-  width: 100vw;
-}
-
-#key-prompt-inner {
-  background: var(--layer-1-color);
-  padding: 100px;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -38,7 +37,6 @@ h1, h2, h3, h4, h5, h6 {
   display: inline-block;
   vertical-align: top;
   height: auto;
-  /* object-fit: contain; */
 }
 
 .thread > .responses {
